# ICPProject

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  CMakeUserPresets.json  ICPProject1.cpp  ICPProject1.h  README.md  vcpkg-configuration.json  vcpkg.json
include/: App.hpp  Assets.hpp  Camera.hpp  Config.hpp  FpsMeter.hpp  Mesh.hpp  Model.hpp  NonCopyable.hpp  ObjectLoader.hpp  ShaderProgram.hpp  SyncedDequePartialImpl.hpp  TrackerThread.hpp
resources/shaders/: basic.frag  basic.vert
src/: App.cpp  Callbacks.cpp  FpsMeter.cpp  ObjectLoader.cpp  ShaderProgram.cpp  TrackerThread.cpp
